tests/parsing/smtlib/poly/errors/180_par_return_sort.psmt2
(set-logic ALL)
(declare-fun foo (par (A) () _
