tests/parsing/smtlib/poly/errors/180_par_return_sort.expected
File "tests/parsing/smtlib/poly/errors/180_par_return_sort.psmt2", line 2, character 29-30:
Error while parsing a function declaration, read the reserved word '_',
      but expected the return sort.
